objects/FSL_Nightly_Communications__c.object
<CustomObject>
    <description>This object holds data required for nightly communications</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Thread_ID__c</fullName>
        <formula>Service_Request__r.Custom_Thread_Id__c</formula>
        <label>Case Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Nightly Communications</relationshipLabel>
        <relationshipName>Nightly_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Message__c</fullName>
        <description>This field includes the custom text which was entered by Advanced User.</description>
        <label>Custom Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Work Order Status</description>
        <label>Communication Trigger Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <label>Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nightly_Communication_Type__c</fullName>
        <formula>IF(ISPICKVAL( Service_Order__r.Communication_Type__c , &quot;Manual Communication&quot;), &quot;Manual Communication&quot;,
IF(ISPICKVAL( Service_Order__r.Communication_Type__c , &quot;Automated Communication&quot;) , &quot;Automated Communication&quot;,
IF(ISPICKVAL( Service_Order__r.Communication_Type__c , &quot;Custom Communication&quot;) , &quot;Custom Communication&quot;,
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nightly Communication Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nightly_Service_Teritory__c</fullName>
        <label>Service Teritory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_Status__c</fullName>
        <formula>TEXT(Service_Order__r.Status)</formula>
        <label>SO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Sub_Status__c</fullName>
        <formula>TEXT( Service_Order__r.Sub_Status__c )</formula>
        <label>SO Sub Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STC_Email_Address__c</fullName>
        <formula>Service_Team_Contact__r.Email</formula>
        <label>STC Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_From__c</fullName>
        <label>Sent From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Nightly Communications</relationshipLabel>
        <relationshipName>Nightly_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Nightly Communications</relationshipLabel>
        <relationshipName>Nightly_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Status__c</fullName>
        <label>Service Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Team_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Team Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Nightly_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Nightly Communications</relationshipLabel>
        <relationshipName>Nightly_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Email_Address__c</fullName>
        <label>Target Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teritory_Branch_Phone__c</fullName>
        <label>Teritory Branch Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_date__c</fullName>
        <label>User date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_formula__c</fullName>
        <formula>IF((Event__c = &quot;Troubleshooting Started&quot; ),  $Label.CommStatus_Message,
IF((Event__c = &quot;Authorized Work Started&quot; ),  $Label.FSL_Authorized_Work_Started,
IF((Event__c = &quot;Service Work Completed&quot; ),  $Label.FSL_Service_Work_Completed,
IF((Event__c = &quot;Invoice Ready&quot;  ), $Label.FSL_Service_Invoice_Ready , &apos;&apos;))))</formula>
        <label>Event Formula</label>
        <type>Text</type>
    </fields>
    <label>Nightly Communications</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Order__c</columns>
        <columns>Active__c</columns>
        <columns>Event__c</columns>
        <columns>Contact__c</columns>
        <columns>Service_Team_Contact__c</columns>
        <columns>Service_Request__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NC-{000000}</displayFormat>
        <label>Nightly Communication Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nightly Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>